syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service ApplicantEducation{
	rpc GetApplicantEducation(AppEduIdRequest) returns (ApplicantEducationReply); 
	rpc GetAllApplicantEducation(google.protobuf.Empty) returns (ApplicantEducationList); 
	rpc AddApplicantEducation(ApplicantEducationList) returns (google.protobuf.Empty); 
	rpc UpdateApplicantEducation(ApplicantEducationList) returns (google.protobuf.Empty); 
	rpc DeleteApplicantEducation(ApplicantEducationList) returns (google.protobuf.Empty); 
}

message AppEduIdRequest{
	string Id = 1;
}

message ApplicantEducationReply{
	string Id = 1;
	string Applicant = 2;
	string Major = 3;
	string CertificateDiploma = 4;
	google.protobuf.Timestamp StartDate = 5;
	google.protobuf.Timestamp CompletionDate = 6;
	sint32 CompletionPercent = 7;
	bytes Timestamp = 8; 
}

message ApplicantEducationList{
	repeated ApplicantEducationReply AppEdus = 1;
}